@@ -1,5 +1,5 @@
 /*
- * This C file has been generated by smidump 0.2.8.
+ * This C file has been generated by smidump 0.2.9.
  * It is intended to be used with the NET SNMP agent.
  *
  * This C file is derived from the MAU-MIB module.
@@ -11,7 +11,7 @@
 #include <string.h>
 #include <malloc.h>
 
-#include "mau_mib.h"
+#include "mau-mib.h"
 
 #include <asn1.h>
 #include <snmp.h>
