@@ -1,5 +1,5 @@
 /*
- * This C header file has been generated by smidump 0.2.8.
+ * This C header file has been generated by smidump 0.2.9.
  * It is intended to be used with the NET SNMP agent.
  *
  * This header is derived from the RMON2-MIB module.
